# Sorting

./: LICENSE  README.md  formats.cpp
dependencies/SDL2/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
dependencies/imgui/: imgui.cpp  imgui.h
res/: Icon.rc
src/: Block.cpp  Block.h  CMakeLists.txt  ImguiWrapper.cpp  ImguiWrapper.h  Renderer.cpp  Renderer.h  Sorter.cpp  Sorter.h  main.cpp
